--- a/StatusPageLibrary/StatusPageLibrary.csproj
+++ b/StatusPageLibrary/StatusPageLibrary.csproj
@@ -15,11 +15,7 @@
 
     <ItemGroup>
       <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0" />
-      <None Include="docs\readme.md" Pack="true" PackagePath="\"/>
-    </ItemGroup>
-
-    <ItemGroup>
-      <Folder Include="docs\" />
+      <None Include="..\readme.md" Pack="true" PackagePath="\"/>
     </ItemGroup>
 
 </Project>
