--- a/StatusPageLibrary/StatusPageLibrary.csproj
+++ b/StatusPageLibrary/StatusPageLibrary.csproj
@@ -14,7 +14,8 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0" />
+      <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0" />
+      <PackageReference Include="Microsoft.Extensions.Http" Version="6.0.0" />
       <None Include="..\readme.md" Pack="true" PackagePath="\"/>
     </ItemGroup>
 
