--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,9 +4,12 @@ name: "Build, Test, and publish package"
 on:
   pull_request:
     branches: [ "main" ]
+  
   push:
     branches: [ "main" ]
   
+  workflow_dispatch: 
+    
 env:
   PROJECT_PATH: 'StatusPageLibrary/StatusPageLibrary.csproj'
   SOURCE: 'https://nuget.pkg.github.com/Ferretly-International/index.json'
