--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
           dotnet-version: 6.0.x
 
       - name: Setup nuget feed
-        run: dotnet nuget add source --username USERNAME --password ${{ secrets.GITHUB_TOKEN }} --store-password-in-clear-text --name github {{ env.PACKAGE_SOURCE }}
+        run: dotnet nuget add source --username USERNAME --password ${{ secrets.GITHUB_TOKEN }} --store-password-in-clear-text --name github ${{ env.PACKAGE_SOURCE }}
         
       - name: Restore dependencies
         run: dotnet restore ${{ env.PROJECT_PATH }}
